deploy/kubernetes/base/gateway-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: ax-serving
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ax-serving
    app.kubernetes.io/component: gateway
  ports:
    - name: http
      port: 80
      targetPort: public
---
apiVersion: v1
kind: Service
metadata:
  name: ax-serving-control
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ax-serving
    app.kubernetes.io/component: gateway
  ports:
    - name: control
      port: 19090
      targetPort: control
